--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -26,7 +26,7 @@ In this lab, the network stream will be pre-created, so it will be available liv
 "Data Repository" section is allowing you to create network real-time data stream. Kafka's producer will push the Network traffic generated data to Kafka cluster and Consumer will consume that data and save that into HDFS in real-time.
 From HDFS, we can visualize the data using visualization tool. This application will allow you to use the existing Kafka's Producer & Consumer function to ingest your real time network data into HDFS environment.
 
-N.B: You can select the pre-loaded network data for the process with pre-seleted Kafka and Network traffic generated server. 
+N.B: You can select the pre-loaded network data for the process with pre-seleted Kafka and Network traffic generated server.  DLP platform provide a default Kafka's Producer, Consumer and network traffic generator. User can defined and deploy their own service also.
 
 # Step 1: Explore DLP Devevelopment Hub
 
