--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -7,9 +7,6 @@ WordCount is a classic example in learning Spark, as Hello World in learning any
 
 ## Lab Objectives
 
-
-#### Completion Time: 25 minutes
-
 * Learn how to get data from a file.
 * Learn how to use some RDD operations on data.
 * Learn how to write data to a new file with file creation in HDFS.
@@ -19,11 +16,14 @@ WordCount is a classic example in learning Spark, as Hello World in learning any
 
 * Knowledge on Hadoop to store the data.
 * Basic knowledge of how spark works.
+* Use Chrome OS
 
 
 ## Step 1: Explore DLP platform
 
-DLP URL [http://10.75.161.85/DDPDevUI/demo/#/ddp/main/DataRepository](http://10.75.161.85/DDPDevUI/demo/#/ddp/main/DataRepository)<br>
+DLP website URL ([link](https://developer.cisco.com/))
+
+[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
 1)	After logging on DLP, click on Development Hub on the left column.<br>
 2)	Choose a workspace; here we use a pre-defined Scala environment, named wksp-scala.<br>
