--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -29,7 +29,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 2)	Choose a workspace; here we use a pre-defined Scala environment, named wksp-scala.<br>
 3)	Click on the Launch button to open IDE workspace.<br>
 
-![Figure](/posts/files/word-count-using-spark/assets/images/step1.jpg)
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step1.jpg?raw=true)
 
 ## Step 2: Explore IDE Workspace
 
