--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -26,7 +26,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 [http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
 1)	After logging on DLP, click on Development Hub on the left column.<br>
-2)	Choose a workspace; here we use a pre-defined Scala environment, named wksp-scala.<br>
+2)	Choose a workspace; here we use a pre-defined Scala environment, named "wksp-scala".<br>
 3)	Click on the Launch button to open IDE workspace.<br>
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/steps1.PNG?raw=true)
