--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -34,7 +34,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 ## Step 2: Explore IDE Workspace
 
 1)	In IDE workspace, code files are listed on the left column.<br>
-![Figure](/posts/files/word-count-using-spark/assets/images/step2-1.jpg)
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step2.png?raw=true)
 
 2）There is a file named build.sbt, which contains the environment for all the jobs to run.<br>
 ![Figure](/posts/files/word-count-using-spark/assets/images/step2-2.jpg)<br>
