--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -37,10 +37,9 @@ DLP website URL ([link](https://developer.cisco.com/))
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step2.png?raw=true)
 
 2）There is a file named build.sbt, which contains the environment for all the jobs to run.<br>
-![Figure](/posts/files/word-count-using-spark/assets/images/step2-2.jpg)<br>
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step4.PNG?raw=true)
 
 The build.sbt file has the following content:<br>
-
  ```
  libraryDependencies += "org.apache.spark" %% "spark-core" % "1.3.0"
  libraryDependencies += "org.apache.spark" %% "spark-sql" % "1.3.0"
