--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -33,7 +33,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 
 ## Step 2: Explore IDE Workspace
 
-1)	In IDE workspace, code files are listed on the left column.<br>
+1)	Below two sections will help to explore the IDE for Word Count project. In the IDE, files are listed in Left Panel.
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step2.png?raw=true)
 
 2）There is a file named build.sbt, which contains the environment for all the jobs to run.<br>
