--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -79,6 +79,30 @@ object WordCount
 ```
 N.B: Use WordCount.scala to view the above code. 
 
+# Step 4 :  Run the Program
+
+1) Select the WordCountRun.sh file.
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step7.PNG?raw=true)
+
+There are two parameters. 
+a) Input Parameter: Here input file from hdfs path is "wordcountinputfile1.txt"
+b) Output Parameter: Here output file which would be saved in hdfs is "output47"
+
+2)	Click on CMI on top of IDE screen and choose Edit Commands, a user can see the shell command here. 
+On CMI, Select "Edit Commands...". It will open a "Commands" window. From this window, select "WordCountRun" and it will select WordCountRun.sh file.
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step5.PNG?raw=true)
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step6.PNG?raw=true)
+
+2) Select the WordCountRun.sh file.
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step7.PNG?raw=true)
+
+
+
+
+
+
 
 ### Two approaches to run the program
 
