--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -98,9 +98,10 @@ On CMI, Select "Edit Commands...". It will open a "Commands" window. From this w
 2) Select the WordCountRun.sh file.
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step7.PNG?raw=true)
 
-
-
-
+3)	Choose a Command under Edit Commands, then click the blue button   to run, as in the Terminal.
+First run the package command.
+Then, run the WordCountRun command.
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step8.PNG?raw=true)
 
 
 
