--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -95,81 +95,41 @@ On CMI, Select "Edit Commands...". It will open a "Commands" window. From this w
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step6.PNG?raw=true)
 
-2) Select the WordCountRun.sh file.
+3) Select the WordCountRun.sh file.
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step7.PNG?raw=true)
 
-3)	Choose a Command under Edit Commands, then click the blue button   to run, as in the Terminal.
+4)	Choose a Command under Edit Commands, then click the blue button   to run, as in the Terminal.
 First run the package command.
 Then, run the WordCountRun command.
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step8.PNG?raw=true)
 
+# Step 5: See Result in HDFS
+1) Edit WordCountResult.sh to change parameters as described below:
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/Step9.png?raw=true)
 
+The parameter is the output path to store the transformed data and the /part-*
+e.g. hdfs://172.16.1.11:8020/tmp/spark/output/output47/part-00*
 
-### Two approaches to run the program
+2)  Choose the Command WordCountResult under Edit Commands, then click the blue button to run.
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/word-count-using-spark/assets/images/step4.jpg?raw=true)
 
- <b><font color='red'>First Approach</font></b><br>
+An Example:
+Input: Welcome to DDP. This is your first program in DDP. //which is present in input file.
 
-l) Click on the Run and select the Terminal option.<br>
-2) Use the command cd worldcount && sbt package to bulid the sbt environment.<br>
-3) Use the command **HADOOP\_USER\_NAME=devnet spark-submit --master yarn --deploy-mode cluster –class WordCount /projects/worldcount/target/scala-2.11/hello_2.11-1.0.jar parameter1 parameter2** to run the job.<br>
-<b>Parameter1:</b> The input path to get the data.<br>
-<b>Parameter2:</b> The output path to store the transformed data.<br>
+Output: Welcome 1
+	    to 		1
+	    DDP. 	2
+	    This 	1
+	    Is 		1
+	    Your 	1
+	    First 	1
+	    Program 1
+	    In 		1
 
-<b><font color='red'>Second Approach</font></b><br>
-1)	Click on CMI on top of IDE screen and choose Edit Commands, a user can see the shell command here.<br>
+Things to Try
+•	Try with numeric data type
+•	Try with case sensitive data as well.
+Completing this coding exercise, we have learned how to count the number of words in an input file using Spark Batch Processing. 
 
-![Figure](/posts/files/word-count-using-spark/assets/images/step3-1.jpg)
-
-2)	Edit WordCountRun.sh to change parameters.<br>
-
-
-![Figure](/posts/files/word-count-using-spark/assets/images/step3-2.jpg)
-
-Choose a Command under Edit Commands, then click the blue button 
-![Figure](/posts/files/word-count-using-spark/assets/images/step3-3.jpg) to run, as in the Terminal.<br>
-
-    First run the package command.
-    Then, run the WordCountRun command.
-
-![Figure](/posts/files/word-count-using-spark/assets/images/step3-4.jpg)
-
-
-## Step 4: See result from HDFS
-
-In the terminal, use command hadoop fs –cat <font color='red'>hdfs://172.16.1.11:8020/tmp/spark/output/output30/part-00*</font> to see the result.<br>
-
-![Figure](/posts/files/word-count-using-spark/assets/images/step4.jpg)
-
-
-##### An Example:
-
-**Input:**<br>
-Welcome to DDP. This is your first program in DDP. //which is present in input file.<br>
-
-**Output:** <br>
-
-```
-Welcome	1
-to	    1
-DDP. 	2
-This 	1
-Is 		1
-Your 	1
-First 	1
-Program 1
-In 		1
-```
-
-## Things to Try
-
-
-* Try with numeric data type
-* Try with case sensitive data as well.
-
-Completing this coding exercise, we have learned how to count the number of words in an input file using Spark Batch Processing. <br>
 There are some more examples and exercise are available in the below mentioned link. This is for your reference.
-[http://spark.apache.org/docs/latest/programming-guide.html](http://spark.apache.org/docs/latest/programming-guide.html).
-
-
-
-
+http://spark.apache.org/docs/latest/programming-guide.html.
