--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -116,15 +116,16 @@ e.g. hdfs://172.16.1.11:8020/tmp/spark/output/output47/part-00*
 An Example:
 Input: Welcome to DDP. This is your first program in DDP. //which is present in input file.
 
-Output: Welcome 1
-	    to 		1
-	    DDP. 	2
-	    This 	1
-	    Is 		1
-	    Your 	1
-	    First 	1
-	    Program 1
-	    In 		1
+Output: 
+Welcome 1<br>
+to      1<br>
+DDP. 	2<br>
+This 	1<br>
+Is 	1<br>
+Your 	1<br>
+First 	1<br>
+Program 1<br>
+In 	1<br>
 
 Things to Try
 •	Try with numeric data type
