--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -128,8 +128,8 @@ Program 1<br>
 In 	1<br>
 
 Things to Try
-•	Try with numeric data type
-•	Try with case sensitive data as well.
+* Try with numeric data type
+* Try with case sensitive data as well.
 Completing this coding exercise, we have learned how to count the number of words in an input file using Spark Batch Processing. 
 
 There are some more examples and exercise are available in the below mentioned link. This is for your reference.
