--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -21,24 +21,28 @@ In this lab we see how to do Interactive static data explore with zeppelin.
 - Basic knowledge of zeppelin
 - Basic programming skill of Spark (e.g. scala, RDD, DataFrame, SparlSQL, etc.)
 - Basic understanding of SQL queries
+- Chrome Browser.
 
-## Step 1: Explore the DDP Dev Center
+## Step 1: Explore DLP Platform
 
 DLP website URL ([link](https://developer.cisco.com/))
 
 [http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
 1. From DLP home page, click Drill to choose interactive analysis environment.
-2. In the popup frame with Zeppelin and Jupyter as options, click Zeppelin
+2. In the popup frame with Zeppelin and Jupyter as options, click Zeppelin.
 3. Follow the pop-out chrome page to begin the interactive analysis and visualization using Zeppelin
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/selectZappline.PNG?raw=true)
+
 
 ## Step 2: Develop in Zeppelin notebook
 
 1. On the Zeppelin homepage, create your own notebook by click on &quot;Create new note&quot;.
-![Figure](/posts/files/data-explore-using-zeppelin/assets/welcome-to-zeppelin.png)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/welcome-to-zeppelin.png?raw=true)
 
 2. Create and name your new notebook in the pop up dialog.
-![Figure](/posts/files/data-explore-using-zeppelin/assets/create-note.png)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/create-note.png?raw=true)
 
 3. In your newly created notebook, a typical Zeppelin interactive development and visualization working environment.
 
