--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -46,6 +46,8 @@ DLP website URL ([link](https://developer.cisco.com/))
 
 3. In your newly created notebook, a typical Zeppelin interactive development and visualization working environment.
 
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/ZapplineIntf.PNG?raw=true)
+
 Note: You can use the top-right tool buttons do corresponding configurations (e.g., set paragraph width, copy visual report link, etc.) when necessary
 
 ## Step 4: Data Refine
