--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -55,6 +55,9 @@ Note: You can use the top-right tool buttons do corresponding configurations (e.
 -    a.	Read in the DLP public available file - bank-full.csv - from HDFS
 -    b.	Remove the header using filter function, and transform data from csv format into RDD of Bank objects
 -    c.	Convert RDD to DataFrame and create temporary table with name “bank”
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/BankFull.PNG?raw=true)
+N.B: Bank Full csv is ready placed in HDFS. User can use this file for further process. 
+
 val bankText = sc.textFile("hdfs://xx.xx.xx.xx:xxxx/yourPath/bank/bank-full.csv")  
 
 case class Bank(age:Integer, job:String, marital : String, education : String, balance : Integer)
