--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -59,6 +59,7 @@ Note: You can use the top-right tool buttons do corresponding configurations (e.
 N.B: Bank Full csv is ready placed in HDFS. User can use this file for further process. 
 
 val bankText = sc.textFile("hdfs://xx.xx.xx.xx:xxxx/yourPath/bank/bank-full.csv")  
+//Replace the bank-full.csv file path.
 
 case class Bank(age:Integer, job:String, marital : String, education : String, balance : Integer)
 
@@ -79,13 +80,19 @@ Suppose we want to see age distribution from bank. To do this, run:
 
 **%sql**** select **age,** count**(1)**from **bank** where **age** &lt; **30** group ****by** age **order**** by** age
 
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/SimpleSql.PNG?raw=true)
+
 You can make input box for setting age condition by replacing 30 with ${maxAge=30}.
 
 **%sql**** select **age,** count**(1)**from **bank** where **age** &lt; **${maxAge** = **30}** group ****by** age **order**** by** age
 
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/inputParameter.PNG?raw=true)
+
 Now we want to see age distribution with certain marital status and add combo box to select marital status. Run:
 
 **%sql**** select **age,** count**(1)**from **bank** where **marital** = **&quot;${marital=single,single|divorced|married}&quot;** group ****by** age **order**** by** age
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/zepplelinListbox.PNG?raw=true)
 
 By running the above paragraphs of SQL queries, you will get corresponding visual result like below:
 
