--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -96,6 +96,7 @@ Now we want to see age distribution with certain marital status and add combo bo
 
 By running the above paragraphs of SQL queries, you will get corresponding visual result like below:
 
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/sql-results.png?raw=true
 ![Figure](/posts/files/data-explore-using-zeppelin/assets/sql-results.png)
 
  **Things to Try**
