--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -56,7 +56,7 @@ Note: You can use the top-right tool buttons do corresponding configurations (e.
 -    b.	Remove the header using filter function, and transform data from csv format into RDD of Bank objects
 -    c.	Convert RDD to DataFrame and create temporary table with name “bank”
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/BankFull.PNG?raw=true)
-N.B: Bank Full csv is ready placed in HDFS. User can use this file for further process. 
+N.B: Bank Full csv is already placed in HDFS. Copy the path of the file for further use. 
 
 val bankText = sc.textFile("hdfs://xx.xx.xx.xx:xxxx/yourPath/bank/bank-full.csv")  
 //Replace the bank-full.csv file path.
