--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -20,17 +20,23 @@ In this lab we see how to integrate Spark Streaming and Kafka, detect a human fa
 - Knowledge for OpenCV face detection function
 - Studied platform user guide
 - Basic knowledge of how Spark Streaming works
+- Use Chrome Browser
 
 
-## **Step 1: Explore the DLP Dev Center**  
+## Step 1: Explore DLP Platform
 
-The Data learning Platform (DLP) can be accessed here:
-http://10.75.161.85/DDPDevUI/demo/#/ddp/main/DataRepository
+DLP website URL ([link](https://developer.cisco.com/))
 
+[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
-1. In DLP website, go to the development area by clicking Development Hub.
-2. Then create a new workspace as per the options available whether you need Spark Java or Spark scala or etc…
+1. In DLP website, go to the development area by clicking <b>"Development Hub"</b>. 
+2. Select the workspace called "wksp-video-lab" and Click on <b>"Launch"</b>
 3. Use the browser to navigate to the Dev Center for the Collaboration technology by clicking the Launch button on created workspace.
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/WelComeScreenVideoStreaming.PNG?raw=true)
+
+
+
 
 ## **Step 2: Creating a new project and developing code**  
 
