--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -30,13 +30,13 @@ DLP website URL ([link](https://developer.cisco.com/))
 [http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
 1. In DLP website, go to the development area by clicking <b>"Development Hub"</b>. 
-2. Select the workspace called "wksp-video-lab" and Click on <b>"Launch"</b>
-3. Use the browser to navigate to the Dev Center for the Collaboration technology by clicking the Launch button on created workspace.
+2. Select the workspace called "wksp-video-lab" and Click on <b>"Launch"</b> button.
+3. It will open a new browser tab with pre-loaded video streaming code.
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/WelComeScreenVideoStreaming.PNG?raw=true)
+N.B: This sample code can be used for exploring the process.
 
-
-
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/VideoStreamingCodeInEditor.PNG?raw=true)
 
 ## **Step 2: Creating a new project and developing code**  
 
