--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -38,22 +38,9 @@ DLP website URL ([link](https://developer.cisco.com/))
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/VideoStreamingCodeInEditor.PNG?raw=true)
 N.B: This sample code can be used for exploring the process.
 
-## **Step 2: Creating a new project and developing code**  
 
-1. Go to the Workspace and select the option called &quot;Create Project&quot; and select Maven project and provide the Name and Description of the project and Click on Create.
-
-![Figure](/posts/files/video-analytics-spark-streaming/assets/create-project.png)
-
-2. Then right click on the java present in test and select New and in that select Java Package. Then give the package name and click on OK.
-3. A new project has been created and again right click on newly created project and select New and in that Java Class. Then give the name of the class and Type of the class and Click OK. A new java class will be created with package name.
-
-![Figure](/posts/files/video-analytics-spark-streaming/assets/new-java-class.png)
- 
-
-## **Step 3: Detect the face from video streaming and save the image to HDFS**  
-
-Once all the above mentioned steps has been done, a new project with class name will be created. Then we can start the coding of detecting the face from video streaming and save the image to HDFS. Core code as below.
-
+## **Step 2: Sample Code for Detecing face from live Stream Camera attached with your workstation.
+<b>N.B: Sample java code will detect the video streaming from the camera attched with your workstation and detect your face. The image of your face would be saved into HDFS.</b>
 
 ```json
 
