--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -52,9 +52,8 @@ Note: You can use the top-right tool buttons do corresponding configurations (e.
 
 ## Step 3: Data Refine
  - Coding in Spark to
--    a.	Read in the DLP public available file - bank-full.csv - from HDFS
--    b.	Remove the header using filter function, and transform data from csv format into RDD of Bank objects
--    c.	Convert RDD to DataFrame and create temporary table with name “bank”
+-    Remove the header using filter function, and transform data from csv format into RDD of Bank objects
+-    Convert RDD to DataFrame and create temporary table with name “bank”
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/BankFull.PNG?raw=true)
 N.B: Bank Full csv is already placed in HDFS. Copy the path of the file for further use. 
 ```jason
