--- a/labs/data-explore-using-zeppelin/1.md
+++ b/labs/data-explore-using-zeppelin/1.md
@@ -54,6 +54,8 @@ Note: You can use the top-right tool buttons do corresponding configurations (e.
  - Coding in Spark to
 -    Remove the header using filter function, and transform data from csv format into RDD of Bank objects
 -    Convert RDD to DataFrame and create temporary table with name “bank”
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/ScriptOnZepplineAfterExecution.PNG?raw=true)
+
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/data-explore-using-zeppelin/assets/BankFull.PNG?raw=true)
 N.B: Bank Full csv is already placed in HDFS. Copy the path of the file for further use. 
 ```jason
