--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -40,7 +40,7 @@ N.B: This sample code can be used for exploring the process.
 
 
 ## **Step 2: Sample Code for Detecing face from live Stream Camera attached with your workstation.
-<b>N.B: Sample java code will detect the video streaming from the camera attched with your workstation and detect your face. The image of your face would be saved into HDFS.</b>
+<b>N.B: Our video streaming progam is used to detect the video streaming from a source. Below Java Program is used to detect the video stream from Camera and detect the face and save the image of the face in HDFS.</b>
 
 ```json
 
