--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -44,128 +44,206 @@ N.B: This sample code can be used for exploring the process.
 
 ```json
 
-package DLP.VideoLabs;
+package DDP.VideoLabs;
 
-import java.io.BufferedInputStream;  
-import java.io.File;  
-import java.io.FileInputStream;  
-import java.io.FileOutputStream;  
-import java.io.IOException;  
-import java.io.InputStream;  
-import java.io.OutputStream;  
-import java.net.URI;  
-import java.util.Arrays;  
-import java.util.HashMap;  
-import java.util.HashSet;  
-import java.util.Random;  
-import org.apache.spark.SparkConf;  
-import org.apache.spark.api.java.function.Function;  
-import org.apache.spark.streaming.Durations;  
-import org.apache.spark.streaming.api.java.JavaDStream;  
-import org.apache.spark.streaming.api.java.JavaPairInputDStream;  
-import org.apache.spark.streaming.api.java.JavaStreamingContext;  
-import org.apache.spark.streaming.kafka.KafkaUtils;  
-import org.opencv.core.Core;    
-import org.opencv.core.Mat;    **import org.opencv.core.MatOfRect;  
-import org.opencv.core.Point;  
-import org.opencv.core.Rect;  
-import org.opencv.core.Scalar;  
-import org.opencv.core.Size;  
-import org.opencv.imgcodecs.Imgcodecs;  
-import org.opencv.imgproc.Imgproc;  
-import org.opencv.objdetect.CascadeClassifier;  
-import kafka.serializer.DefaultDecoder;  
-import kafka.serializer.StringDecoder;  
-import scala.Tuple2;  
-import org.apache.hadoop.conf.Configuration;  
-import org.apache.hadoop.fs.FSDataOutputStream;  
-import org.apache.hadoop.fs.FileSystem;  
-import org.apache.hadoop.fs.Path;  
-import org.apache.hadoop.io.IOUtils;  
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.URI;
+import java.security.PrivilegedExceptionAction;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Random;
 
-public class App  
-{  
-    public static *void** main( String[] args )  
+import org.apache.spark.SparkConf;
+import org.apache.spark.api.java.function.Function;
+import org.apache.spark.streaming.Durations;
+import org.apache.spark.streaming.api.java.JavaDStream;
+import org.apache.spark.streaming.api.java.JavaPairInputDStream;
+import org.apache.spark.streaming.api.java.JavaStreamingContext;
+import org.apache.spark.streaming.kafka.KafkaUtils;
+
+import org.opencv.core.Core;
+import org.opencv.core.Mat;
+import org.opencv.core.MatOfRect;
+import org.opencv.core.Point;
+import org.opencv.core.Rect;
+import org.opencv.core.Scalar;
+import org.opencv.core.Size;
+import org.opencv.imgcodecs.Imgcodecs;
+import org.opencv.imgproc.Imgproc;
+import org.opencv.objdetect.CascadeClassifier;
+
+import kafka.serializer.DefaultDecoder;
+import kafka.serializer.StringDecoder;
+import scala.Tuple2;
+
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.FSDataOutputStream;
+import org.apache.hadoop.fs.FileSystem;
+import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.io.IOUtils;
+import org.apache.hadoop.security.UserGroupInformation;
+
+public class App 
+{
+    public static void main( String[] args ) throws InterruptedException
     {
-        if (args.length != 3)
-            {
-            System.out.println(&quot;please set parameter value for kafka and topic and hdfs file address&quot;);
-             return;
-            }
-            String kafka = args[0];
-
+    	if (args.length != 3)
+    	{
+    		System.out.println("please set parameter value for kafka and topic and username");
+    		return;
+    	}
+    	String kafka = args[0];
         String topics = args[1];
+        final String username = args[2];
+        
+      	// Create context with a 2 seconds batch interval
+        SparkConf sparkConf = new SparkConf().setAppName("JavaVideoLabs");
+        final JavaStreamingContext jssc = new JavaStreamingContext(sparkConf, Durations.seconds(2));
 
-        final String fileAddr = args[2];
-
-        // Create context with a 2 seconds batch interval
-        SparkConf sparkConf = **new** 
-        SparkConf().setAppName(&quot;JavaVideoLabs&quot;);
-
-        JavaStreamingContext jssc = **new** JavaStreamingContext(sparkConf, Durations.seconds(2));
-        HashSet&lt;String&gt; topicsSet = **new** HashSet&lt;String&gt;(Arrays.asList(topics.split(&quot;,&quot;)));
-        HashMap&lt;String, String&gt; kafkaParams = **new** HashMap&lt;String, String&gt;();
-        kafkaParams.put(&quot;metadata.broker.list&quot;, kafka);
-        kafkaParams.put(&quot;group.id&quot;, &quot;groupid&quot;);
-        kafkaParams.put(&quot;consumer.id&quot;, &quot;consumerid&quot;);
+        HashSet<String> topicsSet = new HashSet<String>(Arrays.asList(topics.split(",")));
+        HashMap<String, String> kafkaParams = new HashMap<String, String>();
+        kafkaParams.put("metadata.broker.list", kafka);
+        kafkaParams.put("group.id", "groupid");
+        kafkaParams.put("consumer.id", "consumerid");
 
         // Create direct kafka stream with brokers and topics
-        JavaPairInputDStream&lt;String, **byte** []&gt; messages = KafkaUtils.createDirectStream(
+        JavaPairInputDStream<String, byte[]> messages = KafkaUtils.createDirectStream(
                 jssc,
-                String. **class** ,
-                **byte** []. **class** ,
-                StringDecoder. **class** ,
-                DefaultDecoder. **class** ,
+                String.class,
+                byte[].class,
+                StringDecoder.class,
+                DefaultDecoder.class,
                 kafkaParams,
                 topicsSet
         );
-
-        JavaDStream&lt;String&gt; content = messages.map( **new** Function&lt;Tuple2&lt;String, **byte** []&gt;, String&gt;() {
-
-            private static final long** serialVersionUID = 1L;
         
-            //@Override
-            public String call(Tuple2&lt;String, byte []&gt; tuple2) throws IOException {
-                System.loadLibrary(Core.NATIVE\_LIBRARY\_NAME);
-
-                if ((tuple2 == null ) || (tuple2.\_2().length &lt; 1000))
-                    return* null;
-
-                Mat image = **new** Mat( **new** Size(640, 480), 16);
-
-                image.put(0, 0, tuple2.\_2());
-
+    
+           
+        JavaDStream<String> content = messages.map(new Function<Tuple2<String, byte[]>, String>() {
+           	private static final long serialVersionUID = 1L;
+			//@Override
+            public String call(Tuple2<String, byte[]> tuple2) throws IOException {
+                System.loadLibrary(Core.NATIVE_LIBRARY_NAME);
+                if ((tuple2 == null) || (tuple2._2().length < 1000))
+                	return "";
+                
+                Mat image = new Mat(new Size(640, 480), 16);
+                image.put(0, 0, tuple2._2()); 
+                                    
                 // Detect faces in the image.
-                CascadeClassifier faceDetector = new CascadeClassifier(GetResourceFilePath(&quot;/haarcascade\_frontalface\_alt.xml&quot;).toString());
-
-                MatOfRect faceDetections = **new** MatOfRect();
-
-                faceDetector.detectMultiScale(image, faceDetections);
-                **int** len = faceDetections.toArray().length;
-                System.out.println(String.format(&quot;Detected %s faces&quot;, len));
-
+                Mat mGrey = new Mat();
+                Imgproc.cvtColor( image, mGrey, Imgproc.COLOR_BGR2GRAY); 
+                CascadeClassifier faceDetector =
+                        new CascadeClassifier(GetResourceFilePath("/haarcascade_frontalface_alt.xml").toString());
+                MatOfRect faceDetections = new MatOfRect();
+                faceDetector.detectMultiScale(mGrey, faceDetections);
+                int len = faceDetections.toArray().length;
+                System.out.println(String.format("Detected %s faces", len));
                 // Draw a bounding box around each face.
-                **if** (len &gt; 0)
+                if (len > 0)
                 {
-                    **for** (Rect rect : faceDetections.toArray())
-                    {
-                        Imgproc.rectangle(image, **new** Point(rect.x, rect.y), **new** Point(rect.x + rect.width, rect.y + rect.height), **new** Scalar(0, 255, 0));
-                    }
-                    SaveImageToHDFS(image, fileAddr);
-                    System.exit(0);
-                }
-                **return**** null**;
+	             //   SaveImageToHDFS(image, username);
+	                return "face";
+	              
+                } else
+                    return "";
+           
             }
         });
+    
         content.count().print();
-
+       
         // Start the computation
         jssc.start();
+        Thread.sleep(10000);
+        jssc.stop();
         jssc.awaitTermination();
-    }   
+    }
+    
+    public static void SaveImageToHDFS(Mat img, String username) throws IOException
+    {
+    	 Random r = new Random();
+    	 String tmpFile = "/tmp/" + r.nextInt(2000) + ".jpg";
+         Imgcodecs.imwrite(tmpFile, img);
+         String hdfsAddr = "hdfs://172.16.1.11/ddp/"+username+"/face.jpg";
+         Configuration config = new Configuration();
+         FileSystem fs = FileSystem.get(URI.create(hdfsAddr), config);
+         Path path = new Path(hdfsAddr);
+         FSDataOutputStream out = fs.create(path);
+         InputStream is = new BufferedInputStream(new FileInputStream(tmpFile));
+         IOUtils.copyBytes(is, out, config);
+         is.close();
+         out.close();
+         fs.close();
+         
+         File f = new File(tmpFile);
+     	 if (f.exists() && !f.isDirectory())
+     		f.delete();
+         System.out.println("write file to hdfs");
+    }
+    
+    public static String GetResourceFilePath(String filename) {
+        InputStream inputStream = null;
+        OutputStream outputStream = null;
+        String tempFilename = "/tmp" + filename;
+        try {
+        	File f = new File(tempFilename);
+        	if (f.exists() && !f.isDirectory())
+        		return tempFilename;
+        	
+            // read this file into InputStream
+            inputStream = App.class.getResourceAsStream(filename);
+            if (inputStream == null)
+                System.out.println("empty streaming");
+            // write the inputStream to a FileOutputStream
+            outputStream =
+                    new FileOutputStream(tempFilename);
 
-//We only list the core code above, you can reference the VideoLabs project for more code.  
+            int read;
+            byte[] bytes = new byte[102400];
+
+            while ((read = inputStream.read(bytes)) != -1) {
+                outputStream.write(bytes, 0, read);
+//                System.out.println("read bytes is " + Integer.toString(read));
+            }
+            outputStream.flush();
+
+            System.out.println("Load XML file, Done!");
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (inputStream != null) {
+                try {
+                    inputStream.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (outputStream != null) {
+                try {
+                    // outputStream.flush();
+                    outputStream.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+
+            }
+
+        }
+        return tempFilename;
+    }
+    
 }
+
+
 ```   
 
 ## **Step 4: Maven package and submit the spark task to Hadoop cluster.**
