--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -243,14 +243,17 @@ public class App
     
 }
 
-
 ```   
 
-## **Step 4: Maven package and submit the spark task to Hadoop cluster.**
+## **Step 3: Maven package and submit the spark task to Hadoop cluster.**
 
-Once we finish the below code, we can select &quot;package&quot; in the CMD menu, then click the &quot;run&quot; button, it will package the project. We can see the build successful state as the below capture image.
+Once we finish the above code, we can select <b>“package”</b> in the CMD menu, and click on Blue Button(https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BlueButton.PNG?raw=true). This will package the application.
 
-![Figure](/posts/files/video-analytics-spark-streaming/assets/maven-package.png)
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BuildProject.PNG?raw=true)
+
+After successfull packaging, select  <b>“run”</b>  click the blue button again.
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runProject.PNG?raw=true)
 
 We can submit the spark task to Hadoop using the spark-submit command. You can reference the VideoLabs project&#39;s run.sh to write the submit command. After you submit it, the task will run in Hadoop cluster.
 
