--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -247,7 +247,9 @@ public class App
 
 ## **Step 3: Maven package and submit the spark task to Hadoop cluster.**
 
-Once we finish the above code, we can select <b>“package”</b> in the CMD menu, and click on Blue Button(https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BlueButton.PNG?raw=true). This will package the application.
+Once we finish the above code, we can select <b>“package”</b> in the CMD menu, and click on Blue Button
+
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BlueButton.PNG?raw=true). This will package the application.
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BuildProject.PNG?raw=true)
 
