--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -257,6 +257,9 @@ After successfull packaging, select  <b>“run”</b>  click the blue button aga
 
 We can submit the spark task to Hadoop using the spark-submit command. You can reference the VideoLabs project&#39;s run.sh to write the submit command. After you submit it, the task will run in Hadoop cluster.
 
+![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runFromHadoopCluster.PNG?raw=true)
+
+
 ## **Step 5: Start the Video Source in DLP**
 
 Now you need start the video source in DLP to make the video streaming data. You can follow the below step.
