--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -255,22 +255,21 @@ After successfull packaging, select  <b>“run”</b>  click the blue button aga
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runProject.PNG?raw=true)
 
-We can submit the spark task to Hadoop using the spark-submit command. You can reference the VideoLabs project&#39;s run.sh to write the submit command. After you submit it, the task will run in Hadoop cluster.
+Submitting the spark task to Hadoop using the spark-submit command. Open the run.sh file in editor and run it by clicking on Blue button. After you submit it, the task will run in Hadoop cluster.
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runFromHadoopCluster.PNG?raw=true)
 
+```
+Below points need to change accordingly in run.sh file. 
+IP -> Kafka Broker and port number (Default Kafka Broker and Port number is :  172.16.11.7:9092)
+ddp_video -> Kafka Topic (Default Topic : ddp_video)
+dev_1 -> Userid ( Default id : dev_1)
 
-## **Step 5: Start the Video Source in DLP**
+```
 
-Now you need start the video source in DLP to make the video streaming data. You can follow the below step.
+## **Step 5: View the file which has face images in DLP**
 
-1. From the DLP home page, go to the App Stack area by clicking &quot;App Stack Hub&quot;
-2. Find the &quot;videotest&quot; app stack after clicking &quot;stack library&quot;
-3. Start the &quot;vstream&quot; micro service in the &quot;videotest&quot; after clicking the button below in the &quot;Actions&quot;. It will show the running state.
-
-## **Step 6: View the file which has face images in DLP**
-
-It will make an image file which has face and save it in HDFS. You can view it in DLP follow the below step.
+After executing the run.sh file successfully, image file will be generated and saved into hadoop file system. You can view it in DLP follow the below step.
 
 1. From the DLP home page, go to the Data Repository area by clicking &quot;Data Repository&quot;
 2. Find the image file in the data list.
