--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -39,7 +39,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 N.B: This sample code can be used for exploring the process.
 
 
-## **Step 2: Sample Code for Detecing face from live Stream Camera attached with your workstation.
+## Step 2: Sample Code for Detecing face from live Stream Camera attached with your workstation.
 <b>N.B: Our video streaming progam is used to detect the video streaming from a source. Below Java Program is used to detect the video stream from Camera and detect the face and save the image of the face in HDFS.</b>
 
 ```json
@@ -245,7 +245,7 @@ public class App
 
 ```   
 
-## **Step 3: Maven package and submit the spark task to Hadoop cluster.**
+## Step 3: Maven package and submit the spark task to Hadoop cluster.
 
 Once we finish the above code, we can select <b>“package”</b> in the CMD menu, and click on Blue Button ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/BlueButton.PNG?raw=true). This will package the application.
 
@@ -255,6 +255,7 @@ After successfull packaging, select  <b>“run”</b>  click the blue button aga
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runProject.PNG?raw=true)
 
+## Step 4: Run spark task.
 Submitting the spark task to Hadoop using the spark-submit command. Open the run.sh file in editor and run it by clicking on Blue button. After you submit it, the task will run in Hadoop cluster.
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runFromHadoopCluster.PNG?raw=true)
@@ -267,7 +268,7 @@ dev_1 -> Userid ( Default id : dev_1)
 
 ```
 
-## **Step 5: View the file which has face images in DLP**
+## Step 5: View the file which has face images in DLP**
 
 After executing the run.sh file successfully, image file will be generated and saved into hadoop file system. You can view it in DLP follow the below step.
 
