--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -268,7 +268,7 @@ dev_1 -> Userid ( Default id : dev_1)
 
 ```
 
-## Step 5: View the file which has face images in DLP**
+## Step 5: View the file which has face images in DLP Platform
 
 After executing the run.sh file successfully, image file will be generated and saved into hadoop file system. You can view it in DLP follow the below step.
 
