--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -260,13 +260,20 @@ Submitting the spark task to Hadoop using the spark-submit command. Open the run
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/runFromHadoopCluster.PNG?raw=true)
 
+run.sh script code is in below
 ```
-Below points need to change accordingly in run.sh file. 
-IP -> Kafka Broker and port number (Default Kafka Broker and Port number is :  172.16.11.7:9092)
-ddp_video -> Kafka Topic (Default Topic : ddp_video)
-dev_1 -> Userid ( Default id : dev_1)
+export PATH=$PATH:/home/user/spark-1.6.1-bin-hadoop2.6/bin:/home/user/hadoop-2.6.4/bin
+export HADOOP_CONF_DIR=/home/user/conf
+export HADOOP_USER_NAME=dev_1
+export LD_LIBRARY_PATH=/usr/local/lib/:/usr/lib/:/usr/local/share/OpenCV/java/
+spark-submit --class DDP.VideoLabs.App --master yarn --deploy-mode cluster VideoLabs/target/VideoLabs-0.0.1-SNAPSHOT-jar-with-dependencies.jar 172.16.11.7:9092 ddp_video dev_1
 
 ```
+<b>Three inputs are required to change based on the requirement</b>
+172.16.11.7:9092  -> Kafka Broker and Port number
+ddp_video -> Kafka Topic
+dev_1 -> User Id
+N.B:  Above are the default details for DLP Platform.
 
 ## Step 5: View the file which has face images in DLP Platform
 
