--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -39,7 +39,7 @@ DLP website URL ([link](https://developer.cisco.com/))
 N.B: This sample code can be used for exploring the process.
 
 
-## Step 2: Sample Code for Detecing face from live Stream Camera attached with your workstation.
+## Step 2: Sample Code for Detecting face from live Stream Camera.
 <b>N.B: Our video streaming progam is used to detect the video streaming from a source. Below Java Program is used to detect the video stream from Camera and detect the face and save the image of the face in HDFS.</b>
 
 ```json
