--- a/labs/video-analytics-spark-streaming/1.md
+++ b/labs/video-analytics-spark-streaming/1.md
@@ -6,7 +6,7 @@
 
 Spark Streaming is a key component of Spark, a hugely successful open project in the recent years. Spark Streaming is an extension of the core Spark API that enables scalable, high-throughput, fault-tolerant stream processing of live data streams. Data can be ingested from many sources like Kafka, Flume, Twitter, or TCP sockets, and can be processed using complex algorithms expressed with high-level functions like map, reduce, join and window. Finally, processed data can be pushed out to filesystems, databases, and live dashboards.
 
-In this lab we see how to integrate Spark Streaming and Kafka, detect a human face using OpenCV from a video streaming, and then save the results to a file in Hadoop environment.
+In this lab we will integrate Spark Streaming and Kafka, detect a human face using OpenCV from a video streaming, and then save the results to a file in Hadoop environment.
 
 ![alt-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/video-analytics-spark-streaming/assets/video-image-capturing.png?raw=true)
 
