--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -6,12 +6,13 @@
 In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
 Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
 
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/csa.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa.jpg?raw=true)
+
 
 
 ## Lab Objective
 
-* Building custom handler for CSA in Devnet Platform and analyze the data run time. 
+* Building custom handler for CSA in Developer's Learning Platform(DLP) and analyze the data at real time. 
 
 ## Prerequisites
 
@@ -96,11 +97,14 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 For example:<br>
 
 ```
-     10.75.161.55:1504      // 1504 is the Http Rest API listener Port      10.75.161.55:1505	    // 1505 is the SQL query Listener Port```
+     10.75.161.55:1504      // 1504 is the Http Rest API listener Port 
+     10.75.161.55:1505	    // 1505 is the SQL query Listener Port
+```
 
 <b>Step 12:</b> Now we need to configure the Trucq IP and Port is our custom handler. So we need to update the configuration file.<br>
 
-<b>CsaCustomHandler-->customizations-->instances-->local-runtime.properties</b><br>
+<b>CsaCustomHandler-->customizations-->instances-->local-runtime.properties</b><br>
+
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step12.jpg)
 
 <b>Step 13:</b>In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo. <br>
@@ -120,7 +124,13 @@ For example:<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17.jpg)
 
 Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
-```postgresql.driver.name    :  org.postgresql.Driverpostgresql.max.result     : 1000postgresql.password	      : postgresql.url		      : jdbc:postgresql://10.75.161.55:1505/cqdbpostgresql.user	          : trucq
+
+```
+postgresql.driver.name    :  org.postgresql.Driver
+postgresql.max.result     : 1000
+postgresql.password	      : 
+postgresql.url		      : jdbc:postgresql://10.75.161.55:1505/cqdb
+postgresql.user	          : trucq
 ```
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg)
 
