--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -20,6 +20,7 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 * knowledge on SQL query.
 * knowledge using GitHub.
 * Basic knowledge on XML.
+* Chrome Browser.
 
 
 ### Now we are going to demo for a web server log Analysis step by step.
