--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -27,15 +27,11 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 
 
 
-<b>Step 1:</b> Create a workspace for writing the customize handler code for CSA.
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step1.jpg)
-
-
-<b>Step2:</b> Select Cisco CSA template with any name you like and create.
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step2.jpg)
+<b>Step 1:</b> Create a workspace for writing the customize handler code for CSA. Selet CSA customize handler <b>"wksp-csa-handler"</b> and click on <b>"Launch"</b>
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa.jpg?raw=true)
 
 <b>Step 3:</b> Now the workspace already created for Cisco CSA, now launch the IDE to develop the handler code.
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step3.jpg)
+![Figure](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/develop-stream-handler-cisco-csa/assets/images/csa-IDE.PNG?raw=true)
 
 <b>Step 4:</b> Change the configuration in “include-handler.xml” file. Location is <b>CsaCustomHandler-->build-->temp-->include-handler.xml</b>
 the IDE to develop the handler code.<br>
